_sass/_footer.scss
@import 'mixins';

footer * {
  /* Make all footer content less prominent. */
  font-weight: 300 !important;
}

/* Phone: */
footer.mdl-mega-footer {
  @include limit-width;
  @include pad;

  a {
    color: inherit;
    text-decoration: none;
    white-space: nowrap;
  }

  .top-row {
    ul.links {
      padding-left: 0;

      a {
        color: #e0e0e0;
      }
      li {
        list-style-type: none;
        display: inline-block;
        margin-right: 4px;

        &::after {
          content: "·";
          display: inline-block;
          padding-left: 4px;
          font-weight: bold;
        }

        + li::after {
          display: none;
        }
      }
    }
  }
  .social {
    text-align: right;
    line-height: 36px;
    margin: 0 0 8px;
    padding: 0;
    li {
      display: inline-block;
      list-style-type: none;
    }
    a {
      width: 24px;
      height: 24px;
      line-height: 24px;
      margin: 0 0 0 8px;
    }
    svg {
      width: 24px;
      height: 24px;
    }
  }
  .mission {
    margin-bottom: 8px;

    .logo {
      display: none;
    }
    strong {
      color: #e0e0e0;
    }
  }
  .contact {
    width: 100%;
    margin: 16px 0;

    h1 {
      margin-bottom: 8px;
    }
    ul {
      margin: 0;
    }
  }
  .bottom {
    text-align: center;
    margin: 0;

    .mdl-logo {
      margin: 0 2px 4px 0;
    }
    ul {
      margin-bottom: 0;
    }
    li {
      display: inline-block;
      margin: 0 2px;
      float: none;
    }
  }
}

/* Tablet: */
@media screen and (min-width: 760px) {
  footer.mdl-mega-footer {
    .top-row {
      ul.links {
        li {
          margin-right: 16px;
          &::after {
            display: none;
          }
        }
      }
    }
    .mission {
      width: 75%;
      max-width: calc(100% - 196px);
      float: left;
      box-sizing: border-box;
      padding-right: 24px;
      margin-top: 24px;

      .logo {
        display: block;

        float: left;
        width: 144px;
        height: 144px;
        margin-top: -12px;
        padding-right: 8px;
      }
      p {
        max-width: 528px;
      }
    }
    .contact {
      width: 25%;
      min-width: 196px;
      float: right;
      margin: 0;

      h1 {
        line-height: 24px;
      }
    }
    .contact li {
      line-height: 24px;
    }
    .bottom li {
      float: left;
    }
  }
}

/* Desktop: */
@media screen and (min-width: 1024px) {}

@media screen and (min-height: 720px) {
  .content-wrapper {
    /* This pushes down the footer to the bottom of the page. */
    min-height: calc(100vh - #{$footer-height} - 32px);
  }
  footer {
    height: $footer-height;
  }
}

